--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -49,55 +49,28 @@ jobs:
       id: get_time
       run: echo "timestamp=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_OUTPUT
       
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
+    - name: Create Release and Upload Assets
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: release-${{ steps.get_time.outputs.timestamp }}
-        release_name: Release ${{ steps.get_time.outputs.timestamp }}
-        body: |
-          Automated release built from commit ${{ steps.get_sha.outputs.sha }}
-          
-          **Commit Details:**
-          - SHA: ${{ github.sha }}
-          - Message: ${{ github.event.head_commit.message }}
-          - Author: ${{ github.event.head_commit.author.name }}
-          
-          **Binaries included:**
-          - `uploader.exe` - Windows x64
-          - `uploader` - Linux x64  
-          - `uploader-arm` - Linux ARM64
-        draft: false
-        prerelease: false
+      run: |
+        TAG_NAME="release-${{ steps.get_time.outputs.timestamp }}"
+        RELEASE_NAME="Release ${{ steps.get_time.outputs.timestamp }}"
         
-    - name: Upload Windows x64 Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./uploader.exe
-        asset_name: uploader.exe
-        asset_content_type: application/octet-stream
+        RELEASE_BODY="Automated release built from commit ${{ steps.get_sha.outputs.sha }}
+
+        **Commit Details:**
+        - SHA: ${{ github.sha }}
+        - Message: ${{ github.event.head_commit.message }}
+        - Author: ${{ github.event.head_commit.author.name }}
+
+        **Binaries included:**
+        - \`uploader.exe\` - Windows x64
+        - \`uploader\` - Linux x64  
+        - \`uploader-arm\` - Linux ARM64"
         
-    - name: Upload Linux x64 Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./uploader
-        asset_name: uploader
-        asset_content_type: application/octet-stream
-        
-    - name: Upload Linux ARM64 Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./uploader-arm
-        asset_name: uploader-arm
-        asset_content_type: application/octet-stream
+        gh release create "$TAG_NAME" \
+          --title "$RELEASE_NAME" \
+          --notes "$RELEASE_BODY" \
+          ./uploader.exe \
+          ./uploader \
+          ./uploader-arm
